# physical-ai-textbook

./: .gitignore  404.html  AUTH_SETUP_COMPLETE.txt  BACKEND_DEPLOYMENT_GUIDE.md  BETTER_AUTH_COMPLETE.md  CHATBOT_DEPLOYED.md  COMPLETE_AUTH_FIX_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  HOMEPAGE_REDESIGN.md  LOCAL_DEVELOPMENT_GUIDE.md  PHASE_6_COMPLETION_REPORT.md  PHASE_6_TESTING_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STATUS_PHASES_3_TO_6.md  QUICK_FIX_AUTH.md  README.md  SELECTIVE_COMMIT_GUIDE.md  SETUP_STATUS.md  SPECIFICATION_SUMMARY.md  SUBMISSION_READY.md  index.html  qdrat-and-neon-api-key-gemini-api-key.txt  sitemap.xml
.claude/: settings.local.json
__server/: server.bundle.js
auth-backend/: .env.example  DATABASE_COMPARISON.md  DATABASE_QUICK_START.txt  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  Dockerfile  FIX_EXIT_CODE_128.md  FIX_RENDER_DEPLOYMENT.md  GET_DATABASE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOCAL_SETUP_GUIDE.md  QUICKSTART.md  QUICK_START_LOCAL.md  README.md  REDEPLOY_AFTER_FIX.md  RENDER_DEPLOY.md  RENDER_DEPLOY_SAFE.md  RENDER_QUICK_START.md  RUN_LOCALLY.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  START.bat  START_LOCAL_DB.md  package-lock.json  package.json  setup-db.bat  setup-db.sh  start.sh  test-client.html
blog/: atom.xml  index.html  rss.xml
book/: AUTH_SETUP.md  docusaurus.config.ts  package-lock.json  sidebars.ts
chatbot-backend/: .env.production.example  (+10 more)
code-examples/ros2_packages/robot_control_py/: package.xml  setup.py
code-examples/ros2_packages/robot_control_py/robot_control_py/: __init__.py  velocity_controller.py
(+325 files in other folders)
